--- a/composer.json
+++ b/composer.json
@@ -12,11 +12,19 @@
     "symfony/yaml": "^5.4 || ^6.0 || ^7.0"
   },
   "require-dev": {
-    "symfony/web-profiler-bundle": "^5.4 || ^6.0 || ^7.0"
+    "symfony/web-profiler-bundle": "^5.4 || ^6.0 || ^7.0",
+    "symfony/framework-bundle": "^5.4 || ^6.0 || ^7.0",
+    "symfony/routing": "^5.4 || ^6.0 || ^7.0",
+    "phpunit/phpunit": "^10.5 || ^11.0"
   },
   "autoload": {
     "psr-4": {
       "SavinMikhail\\ResponseProfilerBundle\\": "src/"
+    }
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests/"
     }
   },
   "extra": {
@@ -27,4 +35,3 @@
     }
   }
 }
-
