--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,15 @@
     "symfony/yaml": "^5.4 || ^6.0 || ^7.0"
   },
   "require-dev": {
-    "symfony/web-profiler-bundle": "^5.4 || ^6.0 || ^7.0",
+    "friendsofphp/php-cs-fixer": "^3.64",
+    "phpstan/phpstan": "^1.11",
+    "phpunit/phpunit": "^10.5 || ^11.0",
+    "phpyh/coding-standard": "^3.0",
+    "rector/rector": "^1.0",
+    "savinmikhail/dist-size-optimizer": "^0.2.6",
     "symfony/framework-bundle": "^5.4 || ^6.0 || ^7.0",
     "symfony/routing": "^5.4 || ^6.0 || ^7.0",
-    "phpunit/phpunit": "^10.5 || ^11.0"
+    "symfony/web-profiler-bundle": "^5.4 || ^6.0 || ^7.0"
   },
   "autoload": {
     "psr-4": {
@@ -33,5 +38,18 @@
         "SavinMikhail\\ResponseProfilerBundle\\ResponseProfilerBundle": ["all"]
       }
     }
-  }
+  },
+  "scripts": {
+    "cs:fix": "php-cs-fixer fix --ansi --verbose",
+    "cs:check": "php-cs-fixer fix --dry-run --diff --ansi --verbose",
+    "stan": "phpstan analyse --ansi -c phpstan.neon.dist",
+    "rector": "rector process --ansi",
+    "test": "phpunit --colors=always",
+    "dist:archive": "php tools/dist-size.php",
+    "dist:size": "php tools/dist-size.php"
+  },
+  "config": {
+    "sort-packages": true
+  },
+  "prefer-stable": true
 }
