--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,7 @@
 /phpunit.xml.dist export-ignore
+/.gitignore export-ignore
+/.php-cs-fixer.dist.php export-ignore
+/phpstan.neon.dist export-ignore
+/rector.php export-ignore
+/tests/ export-ignore
+/Tests/ export-ignore
