--- a/composer.json
+++ b/composer.json
@@ -12,15 +12,10 @@
     "symfony/yaml": "^5.4 || ^6.0 || ^7.0"
   },
   "require-dev": {
-    "friendsofphp/php-cs-fixer": "^3.64",
-    "phpstan/phpstan": "^1.11",
-    "phpunit/phpunit": "^10.5 || ^11.0",
-    "phpyh/coding-standard": "^3.0",
-    "rector/rector": "^1.0",
-    "savinmikhail/dist-size-optimizer": "^0.2.6",
     "symfony/framework-bundle": "^5.4 || ^6.0 || ^7.0",
     "symfony/routing": "^5.4 || ^6.0 || ^7.0",
-    "symfony/web-profiler-bundle": "^5.4 || ^6.0 || ^7.0"
+    "symfony/web-profiler-bundle": "^5.4 || ^6.0 || ^7.0",
+    "bamarni/composer-bin-plugin": "^1.8"
   },
   "autoload": {
     "psr-4": {
@@ -33,23 +28,22 @@
     }
   },
   "extra": {
+    "bamarni-bin": {
+      "bin-links": true,
+      "forward-command": true,
+      "target-directory": "vendor-bin"
+    },
     "symfony": {
       "bundle": {
         "SavinMikhail\\ResponseProfilerBundle\\ResponseProfilerBundle": ["all"]
       }
     }
   },
-  "scripts": {
-    "cs:fix": "php-cs-fixer fix --ansi --verbose",
-    "cs:check": "php-cs-fixer fix --dry-run --diff --ansi --verbose",
-    "stan": "phpstan analyse --ansi -c phpstan.neon.dist",
-    "rector": "rector process --ansi",
-    "test": "phpunit --colors=always",
-    "dist:archive": "php tools/dist-size.php",
-    "dist:size": "php tools/dist-size.php"
-  },
   "config": {
-    "sort-packages": true
+    "sort-packages": true,
+    "allow-plugins": {
+      "bamarni/composer-bin-plugin": true
+    }
   },
   "prefer-stable": true
 }
