--- a/vendor-bin/php-cs-fixer/composer.json
+++ b/vendor-bin/php-cs-fixer/composer.json
@@ -1,6 +1,8 @@
 {
   "require": {
     "friendsofphp/php-cs-fixer": "^3.64"
+  },
+  "require-dev": {
+    "phpyh/coding-standard": "^3.0"
   }
 }
-
