move phpunit cache to var

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -5,6 +5,7 @@
          colors="true"
          failOnWarning="true"
          failOnRisky="true"
+         cacheDirectory="var/.phpunit.cache"
 >
     <testsuites>
         <testsuite name="Functional">
