fix phpstan config

--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -1,11 +1,7 @@
 parameters:
-  level: max
+  level: 6
   paths:
     - src
-    - tests
-  checkGenericClassInNonGenericObjectType: false
-  checkMissingIterableValueType: true
-  checkUninitializedProperties: true
-  inferPrivatePropertyTypeFromConstructor: true
-  reportUnmatchedIgnoredErrors: true
-
+  tmpDir: var/phpstan
+  parallel:
+    maximumNumberOfProcesses: 1
