--- a/composer.json
+++ b/composer.json
@@ -55,9 +55,12 @@
     },
     "symfony": {
       "bundle": {
-        "SavinMikhail\\ResponseProfilerBundle\\ResponseProfilerBundle": [
-          "all"
-        ]
+        "SavinMikhail\\ResponseProfilerBundle\\ResponseProfilerBundle": {
+          "when@dev": true
+        }
+      },
+      "copy-from-package": {
+        "config/packages/response_profiler.yaml": "%CONFIG_DIR%/packages/response_profiler.yaml"
       }
     }
   }
