--- a/composer.json
+++ b/composer.json
@@ -55,9 +55,9 @@
     },
     "symfony": {
       "bundle": {
-        "SavinMikhail\\ResponseProfilerBundle\\ResponseProfilerBundle": {
-          "when@dev": true
-        }
+        "SavinMikhail\\ResponseProfilerBundle\\ResponseProfilerBundle": [
+          "dev"
+        ]
       },
       "copy-from-package": {
         "config/packages/response_profiler.yaml": "%CONFIG_DIR%/packages/response_profiler.yaml"
